home layout done commit

--- a/app/src/app/components/home.template.html
+++ b/app/src/app/components/home.template.html
@@ -1,14 +1,34 @@
-<div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true" fxFill>
-  <div fxLayout="row wrap" fxFlex="60px;" fxLayoutAlign="start stretch" [fxShow]="true">
-    <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
+<div fxLayout="column wrap" class="paddingB1em" fxLayoutGap="4em" fxLayoutAlign="center center" [fxShow]="true" fxFill>
+  <div fxLayout="row wrap" class="width100 colorWhite bgGrey" fxFlex="60px;" fxLayoutAlign="space-between center" [fxShow]="true">
+    <div fxLayout="column wrap" fxFlex="10" fxLayoutAlign="center center" [fxShow]="true">
       <h1>
         LOGO</h1>
     </div>
-    <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true">
-      <div fxLayout="row wrap" fxLayoutAlign="start stretch" [fxShow]="true">
-        <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" fxLayoutAlign="start stretch" [fxShow]="true"><button mat-button>Button</button></div>
+    <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true">
+      <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" [fxShow]="true">
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+      </div>
+    </div>
+  </div>
+  <div fxLayout="row wrap" class="width95 bgPurple mainContainer" fxLayoutAlign="start stretch" [fxShow]="true">
+    <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
+      <div fxLayout="row wrap" class="bgGrey" fxFlex="60px" fxLayoutAlign="space-evenly center" [fxShow]="true">
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+      </div>
+      <div fxLayout="row wrap" class="contentContainer" fxLayoutAlign="start stretch" [fxShow]="true">
+        <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
+          <bh-controlForms></bh-controlForms>
+        </div>
+      </div>
+      <div fxLayout="row wrap" class="width100 bgGrey" fxFlex="60px" fxLayoutAlign="end center" [fxShow]="true">
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="10" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="bgPurple" fxFlex="10" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
       </div>
     </div>
   </div>
