--- a/app/src/app/components/home.template.html
+++ b/app/src/app/components/home.template.html
@@ -14,21 +14,21 @@
   </div>
   <div fxLayout="row wrap" class="width95 bgPurple mainContainer" fxLayoutAlign="start stretch" [fxShow]="true">
     <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
-      <div fxLayout="row wrap" class="bgGrey" fxFlex="60px" fxLayoutAlign="space-evenly center" [fxShow]="true">
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="19" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+      <div fxLayout="row wrap" class="border lightgrayBg" fxFlex="60px" fxLayoutAlign="space-evenly center" [fxShow]="true">
+        <div fxLayout="column wrap" class="border bgPurple" fxFlex="19.6" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="border bgPurple" fxFlex="19.6" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="border bgPurple" fxFlex="19.6" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="border bgPurple" fxFlex="19.6" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+        <div fxLayout="column wrap" class="border bgPurple" fxFlex="19.6" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
       </div>
       <div fxLayout="row wrap" class="contentContainer" fxLayoutAlign="start stretch" [fxShow]="true">
         <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
           <bh-controlForms></bh-controlForms>
         </div>
       </div>
-      <div fxLayout="row wrap" class="width100 bgGrey" fxFlex="60px" fxLayoutAlign="end center" [fxShow]="true">
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="10" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
-        <div fxLayout="column wrap" class="bgPurple" fxFlex="10" fxLayoutAlign="center center" [fxShow]="true"><button mat-button>Button</button></div>
+      <div fxLayout="row wrap" class="colorWhite width100 bgGrey" fxFlex="60px" fxLayoutAlign="end center" [fxShow]="true">
+        <div fxLayout="column wrap" fxFlex="5" fxLayoutAlign="center center" [fxShow]="true"><button mat-button class="bgPurple">Cancel</button></div>
+        <div fxLayout="column wrap" fxFlex="5" fxLayoutAlign="center center" [fxShow]="true"><button mat-button class="bgPurple">Next</button></div>
       </div>
     </div>
   </div>
