--- a/app/src/app/components/home.template.html
+++ b/app/src/app/components/home.template.html
@@ -23,7 +23,7 @@
       </div>
       <div fxLayout="row wrap" class="contentContainer" fxLayoutAlign="start stretch" [fxShow]="true">
         <div fxLayout="column wrap" fxFlex="100" fxLayoutAlign="start stretch" [fxShow]="true">
-          <bh-controlForms></bh-controlForms>
+          <bh-controlForms class="width100"></bh-controlForms>
         </div>
       </div>
       <div fxLayout="row wrap" class="colorWhite width100 bgGrey" fxFlex="60px" fxLayoutAlign="end center" [fxShow]="true">
