--- a/app/src/app/components/controlForms.template.html
+++ b/app/src/app/components/controlForms.template.html
@@ -1,16 +1,18 @@
 <div fxLayout="column wrap" class="paddingTop2em" fxLayoutAlign="center center" [fxShow]="true">
-  <div fxLayout="row wrap" class="width95" fxLayoutAlign="center center" [fxShow]="true">
-    <div fxLayout="column wrap" fxFlex="50" fxLayoutGap="1em" fxLayoutAlign="center center" [fxShow]="true">
-      <div fxLayout="row wrap" class="width100" fxLayoutAlign="center center" [fxShow]="true" *ngFor="let label of page.personalDetailsLabel">
-        <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true"><label>
-            {{label.label}}</label></div>
-        <div fxLayout="column wrap" fxFlex="70" fxLayoutAlign="start stretch" [fxShow]="true">
-          <mat-form-field class="inputbgWhite" [appearance]="&apos;outline&apos;" [floatLabel]="&apos;auto&apos;" [hideRequiredMarker]="false">
-            <input matInput name="{{label.value}}" type="{{label.type}}" [required]="true">
+  <form [formGroup]="page.myForms" class="width100">
+    <div fxLayout="row wrap" class="width95" fxLayoutAlign="center center" [fxShow]="true">
+      <div fxLayout="column wrap" fxFlex="50" fxLayoutGap="1em" fxLayoutAlign="center center" [fxShow]="true">
+        <div fxLayout="row wrap" class="width100" fxLayoutAlign="center center" [fxShow]="true" *ngFor="let label of page.personalDetailsLabel">
+          <div fxLayout="column wrap" fxFlex="30" fxLayoutAlign="center center" [fxShow]="true"><label>
+              {{label.label}}</label></div>
+          <div fxLayout="column wrap" fxFlex="70" fxLayoutAlign="start stretch" [fxShow]="true">
+            <mat-form-field class="inputbgWhite" [appearance]="&apos;outline&apos;" [floatLabel]="&apos;auto&apos;" [hideRequiredMarker]="false">
+              <input matInput name="{{label.label}}" type="{{label.type}}" [required]="true" [formControlName]="label.value" id="{{label.value}}">
 
-          </mat-form-field>
-        </div>
+            </mat-form-field>
+          </div>
+        </div><button mat-button (click)="submit()">Submit</button>
       </div>
     </div>
-  </div>
+  </form>
 </div>
